@@ -205,7 +205,11 @@ static const char *def_menu_cpu_speed[] =
     "cpu386-33",
     "cpu486-33",
     "cpu486-66",
+    "cpu486-100",
+    "cpu486-133",
     "cpu586-66",
+    "cpu586-75",
+    "cpu586-90",
     "cpu586-100",
     "cpu586-120",
     "cpu586-133",
